# credit-docs-checker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260706_0001_initial.py
app/: config.py  main.py  models.py  schemas.py
app/api/: checks.py
app/services/: check_service.py  classifier.py  validator.py
tests/: test_classifier.py  test_status.py  test_storage.py
