[project]
name = "credit-docs-checker"
version = "0.1.0"
description = "REST API сервис проверки пакетов документов по льготным кредитным программам"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.50.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
